Commit de la Mihai

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <div style="font-size: 100px;">
       SALUTARE DE LA DMITRI!
+	  <h1 style="font-family: serif;">Salut de la Mihai!</h1>
     </div>
   </body>
 </html>
